--- a/BWebsite.css
+++ b/BWebsite.css
@@ -6,12 +6,17 @@
     font-weight:bolder;
 }
 
+body{
+    padding-bottom: 200px;
+}
+
 .header{
     height: 100vh;
+    padding-bottom: 200px;
 }
 
 .navbar-style{
-    box-shadow: 0 5px 10px #efefef;
+    box-shadow: 0 3px 10px #efefef;
 }
 
 .logo{
@@ -153,12 +158,17 @@ img.img-flower{
     margin: 0px;
 }
 
-.page-footer{
-    margin-left: 170px;
-    margin-right: 170px;
+.footer{
     text-align: center;
-    margin-bottom: 100px;
-    margin-top: 200px;
+    position: relative;
+    height: 150px;
+    clear:both;
+    padding-top:20px;
+}
+
+.ftt:hover{
+    box-shadow: 5px 5px 5px rgb(247, 222, 222);
+    transition: 0.1s;
 }
 
 .fttt{
@@ -183,12 +193,11 @@ img.img-flower{
 
 .cbcb{
     text-align: center;
+    margin-bottom: 70px;
 }
 
-.ab{
-    margin-top: 600px;
+.container{
+    padding-top: 70px;
+    padding-bottom: 180px;
 }
 
-.gb{
-    margin-top: 2400px;
-}
